--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
+@import url("http://fonts.cdnfonts.com/css/sofia-pro");
+* {
+  font-family: "Sofia Pro", sans-serif;
+}
+
 body {
   margin-top: 78px;
 }
 
+/* Cyan colors for body elements (Primary Color) */
 .bgg-cyan {
   background-color: rgb(31, 170, 189);
 }
@@ -11,20 +17,26 @@ body {
 .brd-cyan {
   border: 1px solid rgb(31, 170, 189);
 }
-
 .cyan {
   color: rgb(31, 170, 189);
 }
 
+.donate-head {
+  font-weight: 500;
+}
+
+/* Donate Button Text */
 .donateText {
   font-weight: 500;
   color: rgb(51, 45, 45);
 }
 
+/* No on has ever become poor ... */
 .donate {
   font-size: 1.8rem;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+/* Image */
 .donateimg {
   height: 90%;
 }
@@ -44,7 +56,7 @@ body {
   background: #fff;
 }
 .navbar .nav-item {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   padding-right: 1.4rem;
 }
 
@@ -66,15 +78,17 @@ body {
 }
 
 .info-header {
-  width: 50%;
+  width: 70%;
   margin: auto;
-  border-bottom: 1px #ddd solid;
+  border-bottom: 1px rgb(204, 204, 204) solid;
 }
 
+/* Accordian */
 #accordion {
   cursor: pointer;
 }
 
+/* Volunteer Section */
 #volunteer img {
   margin-top: -50px;
 }
